--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7",
+        "csgt/cancerbero": "^7.0-dev",
+        "csgt/crud": "^6.0",
+        "csgt/menu": "^7.0-dev",
+        "csgt/ui": "^3.0-dev",
+        "csgt/utils": "^8.0-dev",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
-        "csgt/ui" : "^3.0-dev",
-        "csgt/menu" : "^7.0-dev",
-        "csgt/cancerbero" : "^7.0-dev",
-        "csgt/crud" : "^6.0",
-        "csgt/utils" : "^8.0-dev"
+        "laravel/framework": "^9.0",
+        "laravel/sanctum": "^2.14.1",
+        "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
