--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.8",
         "admin-lte": "3.2.0-rc",
-        "axios": "^0.25",
+        "axios": "^0.25.0",
         "bootstrap": "^4.6.0",
         "datatables.net": "^1.10",
         "datatables.net-bs4": "^1.10",
@@ -20,10 +20,12 @@
         "datatables.net-responsive-bs4": "^2.2",
         "eonasdan-bootstrap-datetimepicker": "^4.17",
         "jquery": "^3.6",
+        "laravel-echo": "^1.13.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
+        "pusher-js": "^7.3.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^12.1.0",
