SUBIENDO MEJORAS PARA EL MANEJO DE TIENDA EN LINEA EN TIEMPO REAL

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=production
-APP_KEY=base64:3J76RkSrblrNF6Lqomiefj55VTMqN9M8SNZBPkc1Qks=
+APP_KEY=base64:GoXsXzfhr7LQblf70Zpwdp+RP9ajdMTNpkS2xtPsatM=
 APP_DEBUG=false
 APP_URL=http://localhost
 APP_COMPANY=Softlogic
@@ -18,7 +18,6 @@ DB_DATABASE=ecommerce
 DB_USERNAME=root
 DB_PASSWORD=AdM1n2022_!
 
-BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -46,15 +45,21 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+BROADCAST_DRIVER=pusher
+
+DEBUG=1
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_HOST=
+PUSHER_PORT=
+PUSHER_SCHEME=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_PUSHER_HOST="127.0.0.1"
+MIX_PUSHER_PORT="${PUSHER_PORT}"
 
-APP_PORT=127.0.0.1:80
-FORWARD_DB_PORT=127.0.0.1:3306
+#APP_PORT=127.0.0.1:80
+#FORWARD_DB_PORT=127.0.0.1:3306
 WWWGROUP=1000
 WWWUSER=1000
